Fixed bug with line

--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
 							<h2>Technical Skills</h2>
 						</div>
 						<div class="yui-u">
-							<ul class="talent">
+							<ul>
 								<li>C</li>
 								<li>C++</li>
 								<li>Python</li>
-								<li class="last">HTTP</li>
+								<li>HTTP</li>
 							</ul>
 
-							<ul class="talent">
+							<ul>
 								<li>C#</li>
 								<li>Haskell</li>
 								<li>Java</li>
-								<li class ="last">TCP</li>
+								<li>TCP</li>
 							</ul>
 
-							<ul class="talent">
+							<ul>
 								<li>Javascript, HTML5, CSS</li>
 								<li>React, Vue.js</li>
 								<li>Google Cloud</li>
-								<li class="last">Linux</li>
+								<li>Linux</li>
 								
 							</ul>
 						</div>
