--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<h2>University of California Santa Cruz  IT Services</h2>
 								<h3>Google Apps SME</h3>
 								<h4>2021-present</h4>
-								<p>Technical documentation wrtier and technician trainer for university-licensed Google Apps products.</p>
+								<p>Technical documentation writer and technician trainer for university-licensed Google Apps products.</p>
 							</div>
 
 							<div class="job">
