--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						</div>
 						<div class="yui-u">
 							<h2>University of California - Santa Cruz</h2>
-							<h3>Computer Science BS &mdash; <strong>Graduating Spring 2023</strong> </h3>
+							<h3>Computer Science B.S. &mdash; <strong>Graduating Spring 2023</strong> </h3>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -102,7 +102,7 @@
 							<div class="job">
 								<h2>A Brief Survey of Data Placement in a Geo-Distributed Storage System using Machine Learning</h2>
 								<h3>Authors: Aaron Steinberg and Yash Chhabria</h3>
-								<p>This is a survey paper written for Professor Peter Alvaro's graduate distributed systems class. This research surveys distributed systems that use geo-distributed storage systems for optimal data placement.</p>
+								<p>This is a survey paper written for Professor Peter Alvaro's graduate distributed systems class. This research surveys distributed systems that use geo-distributed storage systems for optimal data placement using a machine learning model.</p>
 								<a href="https://docs.google.com/document/u/1/d/e/2PACX-1vRi_JSl3urSJMr-Mj7rZGkyrPzMANauaqdgXekPwFfHyUSlrkR0azLyoCxT_S0u2tvndypQ5d6vsJwy/pub">Link to the paper</a>
 								<br><a href="https://github.com/palvaro/CSE232-Spring22">Link to the class repository</a>
 							</div>
