Updated resume and columns

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
 
-	<title>Aaron Steinberg | aa.codes</title>
+	<title>Aaron Steinberg</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 
-	<!-- <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" /> -->
-	<!-- <link rel="stylesheet" type="text/css" href="resume.css" media="all" /> -->
+	<link rel="stylesheet" type="text/css" href="bulma.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="styles.css" media="all" />
 </head>
 
@@ -22,15 +21,15 @@
 			<div class="hd">
 				<div>
 					<div>
-						<h1>Aaron Steinberg</h1>
-						<h2>Software Engineer</h2>
+						<h1 class="title is-1">Aaron Steinberg</h1>
+						<h2 class="title is-3">Software Engineer</h2>
+						<a href="https://aa.codes">https://aa.codes</a>
 					</div>
 
 					<div>
 						<div class="contact-info">
-							<h3><a href="mailto:aaron@aa.codes">aaron@aa.codes</a></h3>
-							<h3><a href="mailto:azsteinb@ucsc.edu">azsteinb@ucsc.edu</a></h3>
-							<h3>(818) 800-2989</h3>
+							<h6><a href="mailto:aaron@aa.codes">aaron@aa.codes</a></h6>
+							<h6><a href="mailto:azsteinb@ucsc.edu">azsteinb@ucsc.edu</a></h6>
 						</div>
 					</div>
 				</div>
@@ -38,124 +37,170 @@
 
 			<div class="resumeBody">
 				<div id="mainResumeBody">
+							<div id="education" class="resumeEntry block">
+								<div class="sectionTitle">
+									<h2 class="title is-3">Education:</h2>
+								</div>
+								<div class="job last">
+									<h2>University of California &mdash; Santa Cruz</h2>
+									<h3>Computer Science B.S. &mdash; Graduating June 2023 </h3>
+								</div>
+							</div><!-- Education -->
 
-					<div id="education" class="resumeEntry">
-						<div class="sectionTitle">
-							<h2>Education:</h2>
+					<div class="columns commonMargin">
+						<!-- <div class="columnn is-one-thirds"> -->
+							<div class="resumeEntry column is-two-fifths">
+
+								<div class="sectionTitle">
+									<h2 class="title is-3">Experience:</h2>
+								</div><!-- Section Title -->
+		
+								<div class="job">
+									<h2>Progenabiome</h2>
+									<h3 class="emph">Bioinformatics Software Engineer Intern</h3>
+									<h4 class="date">2019-2020, Summer 2022</h4>
+									<p>I created a proprietary bioinformatics pipeline to avoid using expensive cloud based,
+										licensed solutions. Using Python and various libraries to parse proprietary data
+										formats, I helped organize, quanitify, visualize, and analyze outputs from lab
+										equipment.</p>
+								</div>
+		
+								<div class="job">
+									<h2>University of California Santa Cruz IT Services</h2>
+									<h3>Google Apps SME</h3>
+									<h4 class="date">2021-present</h4>
+									<p>I write technical documentation, administrate various google apps services, and help
+										train first response technichians. </p>
+								</div>
+		
+		
+		
+								<div class="job">
+									<h2>University of California Santa Cruz IT Services</h2>
+									<h3>IT Help Desk Technician</h3>
+									<h4 class="date">2020-2021</h4>
+									<p>I offered technical support for staff and students at the university using
+										ServiceNow. </p>
+								</div>
+		
+		
+								<div class="job last">
+									<h2>University of California Santa Cruz Baskin School of Engineering</h2>
+									<h3>Course Grader</h3>
+									<h4 class="date">Spring 2021</h4>
+									<p>I graded CSE13S, Computer Systems and C Programming. My responsiblities included
+										grading projects, essays, and exams. </p>
+								</div>
+		
+							</div><!-- resume entry -->
+						<!-- </div> -->
+						<div class="resumeEntry column is-three-fifths">
+							<!-- <div class=""> -->
+								<div class="sectionTitle">
+									<h2 class="title is-3">Projects and Research:</h2>
+								</div>
+								<div class="job narrower">
+									<h2>MediBill</h2>
+									<h3>CruzHacks Hackathon First Place Winner</h3>
+									<p>MediBill is a tool to analyze your medical bills. It was made for the CruzHacks 2022
+										Hackathon. The frontend was done in vue.js and the backend was done using Google
+										Cloud functions. MediBill won the prize for best UI/UX, best use of Google Cloud,
+										and the first place QB3 sposnored prize of $2000 for the healthcare hack category.
+									</p>
+									<p><a href="https://devpost.com/software/health-hacker-7soucr">Link to the project</a></p>
+								</div>
+								<div class="job narrower">
+									<h2>A Brief Survey of Data Placement in a Geo-Distributed Storage System using Machine
+										Learning</h2>
+									<h3>Authors: Aaron Steinberg and Yash Chhabria</h3>
+									<p>This is a survey paper written for Professor Peter Alvaro's graduate distributed
+										systems class. This research surveys distributed systems that use geo-distributed
+										storage systems for optimal data placement using a machine learning model.</p>
+									<p>
+										<a
+											href="https://docs.google.com/document/u/1/d/e/2PACX-1vRi_JSl3urSJMr-Mj7rZGkyrPzMANauaqdgXekPwFfHyUSlrkR0azLyoCxT_S0u2tvndypQ5d6vsJwy/pub">Link
+											to the paper</a>
+										<br><a href="https://github.com/palvaro/CSE232-Spring22">Link to the class
+											repository</a>
+									</p>
+								</div>
+								<div class="job narrower last">
+									<h2>Reverse Proxy Load Balancer</h2>
+									<h3>Final Projcect for Principles of Computer Systems Design</h3>
+									<p>Written entirely in POSIX standard C, this load balancer, while rather fundamental,
+										is multi-threaded, consistent, and <i>almost</i> fault tolerant. It estimates
+										performance, load, health, and acts as a proxy to web servers. It is designed to balance the loads
+										of web servers we made earlier in the class. It might work with other web servers that
+										follow
+										the same log format and support certain health check operations, though.</p>
+									<p>
+										<a>This project can only be viewed by request. The repo must be kept private because of
+											plagarism concerns held by the University of California.</a>
+									</p>
+								</div>
+							<!-- </div> Resume Entry -->
 						</div>
-						<div class="job last">
-							<h2>University of California &mdash; Santa Cruz</h2>
-							<h3>Computer Science B.S. &mdash; Graduating June 2023 </h3>
+					</div>
+
+					
+					<div class="columns">
+						<div class="resumeEntry column is-one-quarter">
+							<div class="sectionTitle">
+								<h4 class="title is-4">Skills:</h4>
+							</div>
+							<div class="job narrower">
+								<h2>Programming Languages:</h2>
+								<p>
+									C, C++, C#, Python, Javascript, GO, Haskell, SQL, Bash
+								</p>
+							</div>
+							<div class="job narrower">
+								<h2>Technologies:</h2>
+								<p>
+									Node.js, Express, React, jQuery, GOA, Postgresql, OpenAPI, Heroku,
+									Amazon S3, Google Cloud, Linux
+								</p>
+							</div>
+							<div class="job narrower last">
+								<h2>Other Skills:</h2>
+								<p>
+									Public Speaking, Technical Writing, Creative Writing, Mountain Biking
+								</p>
+							</div>
 						</div>
-					</div><!-- Education -->
-
-					<div class="resumeEntry">
-
-						<div class="sectionTitle">
-							<h2>Experience:</h2>
-						</div><!-- Section Title -->
-
-						<div class="job">
-							<h2>Progenabiome</h2>
-							<h3>Bioinformatics Software Engineer Intern</h3>
-							<h4>2019-2020, Summer 2022</h4>
-							<p>I created a proprietary bioinformatics pipeline to avoid using expensive cloud based,
-								licensed solutions. Using Python and various libraries to parse proprietary data
-								formats, I helped organize, quanitify, visualize, and analyze outputs from lab
-								equipment.</p>
-						</div>
-
-						<div class="job">
-							<h2>University of California Santa Cruz IT Services</h2>
-							<h3>Google Apps SME</h3>
-							<h4>2021-present</h4>
-							<p>I write technical documentation, administrate various google apps services, and help
-								train first response technichians. </p>
-						</div>
-
-
-
-						<div class="job">
-							<h2>University of California Santa Cruz IT Services</h2>
-							<h3>IT Help Desk Technician</h3>
-							<h4>2020-2021</h4>
-							<p>I offered technical support for staff and students at the university using
-								ServiceNow. </p>
-						</div>
-
-
-						<div class="job last">
-							<h2>University of California Santa Cruz Baskin School of Engineering</h2>
-							<h3>Course Grader</h3>
-							<h4>Spring 2021</h4>
-							<p>I graded CSE13S, Computer Systems and C Programming. My responsiblities included
-								grading projects, essays, and exams. </p>
-						</div>
-
-					</div><!-- resume entry -->
-
-					<div class="resumeEntry">
-						<div class="sectionTitle">
-							<h2>Projects and Research:</h2>
-						</div>
-						<div class="job">
-							<h2>MediBill</h2>
-							<h3>CruzHacks Hackathon First Place Winner</h3>
-							<p>MediBill is a tool to analyze your medical bills. It was made for the CruzHacks 2022
-								Hackathon. The frontend was done in vue.js and the backend was done using Google
-								Cloud functions. MediBill won the prize for best UI/UX, best use of Google Cloud,
-								and the first place QB3 sposnored prize of $2000 for the healthcare hack category.
-							</p>
-							<p><a href="https://devpost.com/software/health-hacker-7soucr">Link to the project</a></p>
-						</div>
-						<div class="job">
-							<h2>A Brief Survey of Data Placement in a Geo-Distributed Storage System using Machine
-								Learning</h2>
-							<h3>Authors: Aaron Steinberg and Yash Chhabria</h3>
-							<p>This is a survey paper written for Professor Peter Alvaro's graduate distributed
-								systems class. This research surveys distributed systems that use geo-distributed
-								storage systems for optimal data placement using a machine learning model.</p>
-							<p>
-								<a
-								href="https://docs.google.com/document/u/1/d/e/2PACX-1vRi_JSl3urSJMr-Mj7rZGkyrPzMANauaqdgXekPwFfHyUSlrkR0azLyoCxT_S0u2tvndypQ5d6vsJwy/pub">Link
-								to the paper</a>
-							<br><a href="https://github.com/palvaro/CSE232-Spring22">Link to the class
-								repository</a>
-							</p>
-						</div>
-						<div class="job last">
-							<h2>HTTP Load Balancer</h2>
-							<h3>Final Projcect for Principles of Computer Systems Design</h3>
-							<p>Written entirely in POSIX standard C, this load balancer, while rather fundamental,
-								is multi-threaded, consistent, and <i>almost</i> fault tolerant. It estimates
-								performance, load,
-								and health of as many HTTP servers as you want. It is designed to balance the loads
-								of HTTP servers we made earlier in the class. It might work with other HTTP servers that
-								follow
-								the same log format and support certain health check operations, though.</p>
-							<p>
-								<a>This project can only be viewed by request. The repo must be kept private because of
-								plagarism concerns held by the University of California.</a>
-							</p>
-						</div>
-					</div> <!-- Resume Entry -->
-
-					<div class="resumeEntry">
-						<div class="sectionTitle">
-							<h2>Skills:</h2>
-						</div>
-						<div class="job">
-							<h2>Programming Languages:</h2>
-							<p>
-								C, C++, C#, Python, Javascript, GO, Haskell, SQL
-							</p>
-						</div>
-						<div class="job narrower last">
-							<h2>Technologies:</h2>
-							<p>
-								Node.js, Express, React, jQuery, GOA, Postgresql, OpenAPI, Heroku,
-								Amazon S3, Google Cloud, Linux
-							</p>
+						<div class="resumeEntry column is-three-quarters">
+							<div class="sectionTitle">
+								<h4 class="title is-4">Course Work:</h4>
+							</div>
+							<div class="job narrower">
+								<h2>Computer Science:</h2>
+								<p>
+									Distributed Systems, Full Stack Web Development, Introduction to Software
+									Engineering,
+									Natural Language Processing, Applied Machine Learning, Functional Programming,
+									Principals of Computer System Design, Computer Architecture, Data Strucutures &
+									Algorithms,
+									Computer Systems & C Programming, Computer Systems & Assembly Language,
+									Programming Abstractions in Python, Introduction to Networking, Introduction to
+									Python
+								</p>
+							</div>
+							<div class="job narrower">
+								<h2>Mathematics:</h2>
+								<p>
+									Historical Mathematics, Probability and Statistics, Applied Discrete Mathematics,
+									Linear Algebra, Vector Calculus
+								</p>
+							</div>
+							<div class="job narrower last">
+								<h2>Other Fields of Studies:</h2>
+								<p>
+									Microeconomics, Physics, Modern European History,
+									History of the Holocaust, Visual Art History of Africa/Oceana/Americas,
+									Applied Ethics, Rheotric & Inquiry, Global Action, Power & Representation,
+									US History, Spanish
+								</p>
+							</div>
 						</div>
 					</div>
 				</div><!-- Resume Body -->
@@ -168,9 +213,6 @@
 			</div><!--// yui-main -->
 		</div><!--// bd -->
 
-		<div class="footer">
-			<p>Aaron Steinberg &mdash; <a href=" aa@aa.codes">aaron@aa.codes</a> &mdash; (818) 800-2989</p>
-		</div>
 
 
 	</div><!-- // inner -->
@@ -180,5 +222,6 @@
 
 
 </body>
+
 
 </html>
