--- a/index.html
+++ b/index.html
@@ -129,10 +129,8 @@
 									<h3>Final Projcect for Principles of Computer Systems Design</h3>
 									<p>Written entirely in POSIX standard C, this load balancer, while rather fundamental,
 										is multi-threaded, consistent, and <i>almost</i> fault tolerant. It estimates
-										performance, load, health, and acts as a proxy to web servers. It is designed to balance the loads
-										of web servers we made earlier in the class. It might work with other web servers that
-										follow
-										the same log format and support certain health check operations, though.</p>
+										performance, load, health, of other web servers. It routes and balances requests across
+										these other servers.</p>
 									<p>
 										<a>This project can only be viewed by request. The repo must be kept private because of
 											plagarism concerns held by the University of California.</a>
@@ -164,7 +162,8 @@
 							<div class="job narrower last">
 								<h2>Other Skills:</h2>
 								<p>
-									Public Speaking, Technical Writing, Creative Writing, Mountain Biking
+									SCRUM, Teamwork, Public Speaking, Software Testing, Technical Writing, Documenation, Creative Writing, 
+									Teaching, Management, Mountain Biking
 								</p>
 							</div>
 						</div>
