new resume update

--- a/index.html
+++ b/index.html
@@ -100,8 +100,18 @@
 									<h2 class="title is-3">Projects and Research:</h2>
 								</div>
 								<div class="job narrower">
+									<h2>Locally Imagined</h2>
+									<h3>Locally focused art marketplace for Santa Cruz, California</h3>
+									<p>Locally Imagined is a platform to break the glass ceiling of the art trade for hobbyist and professional artists alike.
+										This application is designed to lower the "height requirement" to be a self-sustaining artist.
+										Created using React, Go, GOA, Amazon S3, Postgresql, and Heroku.
+									</p>
+									<p>Team Members: Aaron Steinberg, Dylan Rosenthal, Jake Warsaw, Richard Zeng, Theo Ho</p>
+									<p><a href="https://locallyimagined.com">Locally Imagined Website</a></p>
+								</div>
+								<div class="job narrower">
 									<h2>MediBill</h2>
-									<h3>CruzHacks Hackathon First Place Winner</h3>
+									<h3>CruzHacks 2022 Hackathon First Place Winner</h3>
 									<p>MediBill is a tool to analyze your medical bills. It was made for the CruzHacks 2022
 										Hackathon. The frontend was done in vue.js and the backend was done using Google
 										Cloud functions. MediBill won the prize for best UI/UX, best use of Google Cloud,
