--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<h4 class="date">2019-2020, Summer 2022</h4>
 									<p>I created a proprietary bioinformatics pipeline to avoid using expensive cloud based,
 										licensed solutions. Using Python and various libraries to parse proprietary data
-										formats, I helped organize, quanitify, visualize, and analyze outputs from lab
+										formats, I helped organize, quantify, visualize, and analyze outputs from lab
 										equipment.</p>
 								</div>
 		
@@ -70,7 +70,7 @@
 									<h3>Google Apps SME</h3>
 									<h4 class="date">2021-present</h4>
 									<p>I write technical documentation, administrate various google apps services, and help
-										train first response technichians. </p>
+										train first response technicians. </p>
 								</div>
 		
 		
@@ -88,7 +88,7 @@
 									<h2>University of California Santa Cruz Baskin School of Engineering</h2>
 									<h3>Course Grader</h3>
 									<h4 class="date">Spring 2021</h4>
-									<p>I graded CSE13S, Computer Systems and C Programming. My responsiblities included
+									<p>I graded CSE13S, Computer Systems and C Programming. My responsibilities included
 										grading projects, essays, and exams. </p>
 								</div>
 		
@@ -115,7 +115,7 @@
 									<p>MediBill is a tool to analyze your medical bills. It was made for the CruzHacks 2022
 										Hackathon. The frontend was done in vue.js and the backend was done using Google
 										Cloud functions. MediBill won the prize for best UI/UX, best use of Google Cloud,
-										and the first place QB3 sposnored prize of $2000 for the healthcare hack category.
+										and the first place QB3 sponsored prize of $2000 for the healthcare hack category.
 									</p>
 									<p><a href="https://devpost.com/software/health-hacker-7soucr">Link to the project</a></p>
 								</div>
@@ -136,14 +136,14 @@
 								</div>
 								<div class="job narrower last">
 									<h2>Reverse Proxy Load Balancer</h2>
-									<h3>Final Projcect for Principles of Computer Systems Design</h3>
+									<h3>Final Project for Principles of Computer Systems Design</h3>
 									<p>Written entirely in POSIX standard C, this load balancer, while rather fundamental,
 										is multi-threaded, consistent, and <i>almost</i> fault tolerant. It estimates
 										performance, load, health, of other web servers. It routes and balances requests across
 										these other servers.</p>
 									<p>
 										<a>This project can only be viewed by request. The repo must be kept private because of
-											plagarism concerns held by the University of California.</a>
+											plagiarism concerns held by the University of California.</a>
 									</p>
 								</div>
 							<!-- </div> Resume Entry -->
@@ -172,7 +172,7 @@
 							<div class="job narrower last">
 								<h2>Other Skills:</h2>
 								<p>
-									SCRUM, Teamwork, Public Speaking, Software Testing, Technical Writing, Documenation, Creative Writing, 
+									SCRUM, Teamwork, Public Speaking, Software Testing, Technical Writing, Documentation, Creative Writing, 
 									Teaching, Management, Mountain Biking
 								</p>
 							</div>
@@ -187,7 +187,7 @@
 									Distributed Systems, Full Stack Web Development, Introduction to Software
 									Engineering,
 									Natural Language Processing, Applied Machine Learning, Functional Programming,
-									Principals of Computer System Design, Computer Architecture, Data Strucutures &
+									Principals of Computer System Design, Computer Architecture, Data Structures &
 									Algorithms,
 									Computer Systems & C Programming, Computer Systems & Assembly Language,
 									Programming Abstractions in Python, Introduction to Networking, Introduction to
@@ -205,8 +205,8 @@
 								<h2>Other Fields of Studies:</h2>
 								<p>
 									Microeconomics, Physics, Modern European History,
-									History of the Holocaust, Visual Art History of Africa/Oceana/Americas,
-									Applied Ethics, Rheotric & Inquiry, Global Action, Power & Representation,
+									History of the Holocaust, Visual Art History of Africa/Oceania/Americas,
+									Applied Ethics, Rhetoric & Inquiry, Global Action, Power & Representation,
 									US History, Spanish
 								</p>
 							</div>
