--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
 		
 								<div class="job">
 									<h2>University of California Santa Cruz IT Services</h2>
-									<h3>Google Apps SME</h3>
+									<h3>Google Workspace Subject Matter Expert</h3>
 									<h4 class="date">2021-present</h4>
 									<p>I write technical documentation, administrate various google apps services, and help
-										train first response technicians. </p>
+										train first response technicians. In addition, I also create internal automation tools
+										for administering the UCSC Google Workspace.</p>
 								</div>
 		
 		
