updates to Google Apps SME

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<h4 class="date">2021-present</h4>
 									<p>I write technical documentation, administrate various google apps services, and help
 										train first response technicians. In addition, I also create internal automation tools
-										for administering the UCSC Google Workspace.</p>
+										for administering the UCSC Google Workspace. I design and implement APIs for internal tools using OpenApi standards in Node.js and Express.</p>
 								</div>
 		
 		
