changes to better reflect my experience

--- a/index.html
+++ b/index.html
@@ -58,39 +58,35 @@
 								<div class="job">
 									<h2>Progenabiome</h2>
 									<h3 class="emph">Bioinformatics Software Engineer Intern</h3>
-									<h4 class="date">2019-2020, Summer 2022</h4>
-									<p>I created a proprietary bioinformatics pipeline to avoid using expensive cloud based,
-										licensed solutions. Using Python and various libraries to parse proprietary data
-										formats, I helped organize, quantify, visualize, and analyze outputs from lab
-										equipment.</p>
+									<h4 class="date">Summer 2019, Summer 2022</h4>
+									<p>I helped with internal tool development to parse and analyze data from lab equipment. This gave me experience in the intersection
+										of bioinformatics, computer science, and medical work. I developed the tools using Python with Pandas and other data science libraries.
+									</p>
 								</div>
 		
 								<div class="job">
 									<h2>University of California Santa Cruz IT Services</h2>
 									<h3>Google Workspace Subject Matter Expert</h3>
 									<h4 class="date">2021-present</h4>
-									<p>I write technical documentation, administrate various google apps services, and help
+									<p>I write technical documentation, administrate various Google Apps services, and help
 										train first response technicians. In addition, I also create internal automation tools
 										for administering the UCSC Google Workspace. I design and implement APIs for internal tools using OpenApi standards in Node.js and Express.</p>
 								</div>
-		
-		
-		
+
 								<div class="job">
-									<h2>University of California Santa Cruz IT Services</h2>
-									<h3>IT Help Desk Technician</h3>
-									<h4 class="date">2020-2021</h4>
-									<p>I offered technical support for staff and students at the university using
-										ServiceNow. </p>
-								</div>
-		
-		
-								<div class="job last">
 									<h2>University of California Santa Cruz Baskin School of Engineering</h2>
 									<h3>Course Grader</h3>
 									<h4 class="date">Spring 2021</h4>
 									<p>I graded CSE13S, Computer Systems and C Programming. My responsibilities included
 										grading projects, essays, and exams. </p>
+								</div>
+		
+								<div class="job last">
+									<h2>University of California Santa Cruz IT Services</h2>
+									<h3>IT Help Desk Technician</h3>
+									<h4 class="date">2020-2021</h4>
+									<p>I offered technical support for staff and students at the university using
+										ServiceNow. </p>
 								</div>
 		
 							</div><!-- resume entry -->
@@ -105,7 +101,7 @@
 									<h3>Locally focused art marketplace for Santa Cruz, California</h3>
 									<p>Locally Imagined is a platform to break the glass ceiling of the art trade for hobbyist and professional artists alike.
 										This application is designed to lower the "height requirement" to be a self-sustaining artist.
-										Created using React, Go, GOA, Amazon S3, Postgresql, and Heroku.
+										Created using React, Go, GOA, Amazon S3, Postgresql, and Heroku. This was a group effort created using an agile workflow.
 									</p>
 									<p>Team Members: Aaron Steinberg, Dylan Rosenthal, Jake Warsaw, Richard Zeng, Theo Ho</p>
 									<p><a href="https://locallyimagined.com">Locally Imagined Website</a></p>
@@ -115,8 +111,8 @@
 									<h3>CruzHacks 2022 Hackathon First Place Winner</h3>
 									<p>MediBill is a tool to analyze your medical bills. It was made for the CruzHacks 2022
 										Hackathon. The frontend was done in vue.js and the backend was done using Google
-										Cloud functions. MediBill won the prize for best UI/UX, best use of Google Cloud,
-										and the first place QB3 sponsored prize of $2000 for the healthcare hack category.
+										Cloud functions. MediBill won the three first place prizes. These included best UI/UX, best use of Google Cloud,
+										and the QB3 sponsored prize of $2000 for the healthcare hack category.
 									</p>
 									<p><a href="https://devpost.com/software/health-hacker-7soucr">Link to the project</a></p>
 								</div>
