changes to better reflect my experience

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							<div class="job narrower">
 								<h2>Computer Science:</h2>
 								<p>
-									Distributed Systems, Full Stack Web Development, Introduction to Software
+									Analysis of Algorithms, Computational Models, Distributed Systems, Full Stack Web Development, Introduction to Software
 									Engineering,
 									Natural Language Processing, Applied Machine Learning, Functional Programming,
 									Principals of Computer System Design, Computer Architecture, Data Structures &
