--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 								</div>
 							</div><!-- Education -->
 
-					<div class="columns commonMargin">
+					
 						<!-- <div class="columnn is-one-thirds"> -->
-							<div class="resumeEntry column is-two-fifths">
+							<div class="resumeEntry">
 
 								<div class="sectionTitle">
 									<h2 class="title is-3">Experience:</h2>
@@ -59,8 +59,7 @@
 									<h2>Progenabiome</h2>
 									<h3 class="emph">Bioinformatics Software Engineer Intern</h3>
 									<h4 class="date">Summer 2019, Summer 2022</h4>
-									<p>I helped with internal tool development to parse and analyze data from lab equipment. This gave me experience in the intersection
-										of bioinformatics, computer science, and medical work. I developed the tools using Python with Pandas and other data science libraries.
+									<p>I helped with internal tool development to parse and analyze data from lab equipment. This gave me experience in the intersection of bioinformatics, computer science, and medical work. I developed the tools using Python with Pandas and other data science libraries.
 									</p>
 								</div>
 		
@@ -91,7 +90,8 @@
 		
 							</div><!-- resume entry -->
 						<!-- </div> -->
-						<div class="resumeEntry column is-three-fifths">
+						<div class="columns commonMargin">
+						<div class="resumeEntry column">
 							<!-- <div class=""> -->
 								<div class="sectionTitle">
 									<h2 class="title is-3">Projects and Research:</h2>
