updated impropper job title

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		
 								<div class="job">
 									<h2>Progenabiome</h2>
-									<h3 class="emph">Bioinformatics Software Engineer Intern</h3>
+									<h3>Bioinformatics Software Engineer Intern</h3>
 									<h4 class="date">Summer 2019, Summer 2022</h4>
 									<p>I helped with internal tool development to parse and analyze data from lab equipment. This gave me experience in the intersection of bioinformatics, computer science, and medical work. I developed the tools using Python with Pandas and other data science libraries.
 									</p>
