--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 					<div>
 						<h1 class="title is-1">Aaron Steinberg</h1>
 						<h2 class="title is-3">Software Engineer</h2>
-						<a href="https://aa.codes">https://aa.codes</a>
+						<a href="https://aa.codes">https://aa.codes</a><br/>
+						<a href="https://aa.codes/AaronSteinberg.pdf">PDF version</a>
 					</div>
 
 					<div>
