--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-    <link rel="stylesheet" type="text/css" href="styles.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="newstyles.css" media="all" />
 
 </head>
 
