--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         int main() {
     </div>
     <h1 class="mainTitle">/**</h1>
-    <div class="firstIndentCommentLarge"> Author: Aaron Steinberg</div>
+    <div class="firstIndentCommentLarge typewriter"> Author: Aaron Steinberg</div>
     <div class="linkBox">
         <h3>Links:</h3>
         <h4>Resume: <a href="https://aa.codes/aaronsteinberg.pdf">https://aa.codes/aaronsteinberg.pdf</a></h4>
