--- a/index.html
+++ b/index.html
@@ -35,81 +35,15 @@
 
         </p>
         <p>
-            I am originally from Los Angeles County, but I now live in Santa Cruz, California studying at the University of California Santa Cruz. I plan on moving back to Los Angeles once I graduate from UCSC this June.
-            From there, I will continue my contract work while traveling and exploring full-time job options. I am looking for work that is both morally fulfilling and intellectually challenging.
-            I want to have impact that is a net positive to our world, and not only in an 'innovation for the sake of innovation' type of way.
+            I just finished up four amazing years studying Computer Science at the University of California, Santa Cruz. I currently work on a couple different cool projects as a consulting software engineer. I look for work that is both morally fulfilling and intellectually challenging.
+            I want to have impact that is a net positive to our world, and not only in an 'innovation for the sake of innovation' type of way. Later this summer, I plan on either doing something entrepreneurial or doing something less cool, like accepting a position at big tech company somewhere.
         </p>
         <h1>
             **/
         </h1>
 
     </div>
-
     <div class="codeChunk">
-        <div class="moreCode">
-            int server_fd, new_socket, valread;<br>
-            struct sockaddr_in address;<br>
-            int opt = 1;<br>
-            int addrlen = sizeof(address);<br>
-            char buffer[1024];<br><br>
-            if ((server_fd = socket(AF_INET, SOCK_STREAM, 0)) < 0) { <br>
-                <div class="ifStatement">
-                    perror("socket failed"); <br>
-                    exit(EXIT_FAILURE); <br>
-                </div>
-            } <br>
-            <br>
-            if (setsockopt(server_fd, SOL_SOCKET,
-                   SO_REUSEADDR | SO_REUSEPORT, &opt,
-                   sizeof(opt))) {<br>
-                    <div class="ifStatement">
-                        perror("setsockopt failed");<br>
-                        exit(EXIT_FAILURE);
-                    </div>
-
-            }<br><br>
-            address.sin_family = AF_INET; <br>
-            address.sin_addr.s_addr = INADDR_ANY; <br>
-            address.sin_port = htons(PORT); <br>
-            <br>
-
-            if (bind(server_fd, (struct sockaddr*)&address,
-             sizeof(address))
-        < 0) { <br>
-            <div class="ifStatement">
-                perror("bind failed"); <br>
-                exit(EXIT_FAILURE); <br>
-            </div>
-        } <br>
-         <br>
-        if (listen(server_fd, 3) < 0) { <br>
-            <div class="ifStatement">
-                perror("listen"); <br>
-                exit(EXIT_FAILURE); <br>
-            </div>
-
-        } <br>
-
-        while(1){ <br>
-            <div class="ifStatement">
-                new_socket = accept(server_fd, (struct sockaddr*)&address, (socklen_t*)&addrlen); <br>
-                meaninglessRead = read(new_socket, buffer, 1023); <br>
-                if (meaninglessRead && strcmp(buffer, "SHUTDOWN") == 0) { <br>
-                    <div class="ifStatement">
-                        break; <br>
-                    </div>
-          
-
-                }<br>
-                send(new_socket, "Thanks for checking out my portfolio!", 37); <br>
-            </div>
-
-        }<br>
-        close(new_socket);<br>
-        shutdown(server_fd, SHUT_RDWR); <br>
-        return 0;<br>
-        </div>
-
         }
     </div>
 
