--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="firstIndentCommentLarge typewriter"> Author: Aaron Steinberg</div>
     <div class="linkBox">
         <h3>Links:</h3>
-        <h4>Resume: <a href="https://aa.codes/aaronsteinberg.pdf">https://aa.codes/aaronsteinberg.pdf</a></h4>
+        <h4>Resume: <a href="https://aa.codes/ResumeTex/aaronsteinberg.pdf">https://aa.codes/ResumeTex/aaronsteinberg.pdf</a></h4>
         <h4>Github: <a href="https://github.com/azsteinb">https://github.com/azsteinb</a></h4>
         <h4>LinkedIn: <a href="https://www.linkedin.com/in/aaron-steinberg-software/">https://www.linkedin.com/in/aaron-steinberg-software/</a></h4>
         <h4>Email: <a href="mailto:aaron@aa.codes">aaron@aa.codes</a></h4>
