--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p>
         <p>
             I just finished up four amazing years studying Computer Science at the University of California, Santa Cruz. I currently work on a couple different cool projects as a consulting software engineer. I look for work that is both morally fulfilling and intellectually challenging.
-            I want to have impact that is a net positive to our world, and not only in an 'innovation for the sake of innovation' type of way. Later this summer, I plan on either doing something entrepreneurial or doing something less cool, like accepting a position at big tech company somewhere.
+            I want to have impact that is a net positive to our world, and not only in an 'innovation for the sake of innovation' type of way. I am currently looking to transition to a full time software role.
         </p>
         <h1>
             **/
