--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
     </div>
     <div id="bio" class="bioBox">
         <h2>Bio:</h2>
-        <p>I am a software engineer who loves distributed systems and lower level systems programming.
-            I also love web development, and have worked with many different frameworks and tech stacks. I currently work as a contract software engineer, and I am looking to transition to a full-time role later this summer.
-            I plan on going back into academia after a few years in industry and hope to do meaningful research in distributed systems.
-            I am a big fan of free and open source software, and I am currently looking for projects to contribute to.
+            <p>
+                I am a software engineer with an interest in distributed systems and systems programming.
+                I also like web development. I currently work as a Software Engineer Consultant at OrganizeMyPeople, a software firm, where I create full stack web applications.
+            </p>
+            <p>
+                I love open source software and am currently looking for projects to contribute to.
+            </p>
 
-        </p>
-        <p>
-            I just finished up four amazing years studying Computer Science at the University of California, Santa Cruz. I currently work on a couple different cool projects as a consulting software engineer. I look for work that is both morally fulfilling and intellectually challenging.
-            I want to have impact that is a net positive to our world, and not only in an 'innovation for the sake of innovation' type of way. I am currently looking to transition to a full time software role.
-        </p>
+            <p>
+                I recently graduated with a BS in Computer Science from the University of Califorina, Santa Cruz, and am currently looking to transition to a new role.
+            </p>
         <h1>
             **/
         </h1>
